
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct mp_log {int dummy; } ;
struct bstr {int dummy; } ;
typedef int m_option_t ;


 int OP_NONE ;
 int parse_str_list_impl (struct mp_log*,int const*,struct bstr,struct bstr,void*,int ) ;

__attribute__((used)) static int parse_str_list(struct mp_log *log, const m_option_t *opt,
                          struct bstr name, struct bstr param, void *dst)
{
    return parse_str_list_impl(log, opt, name, param, dst, OP_NONE);
}
