; ModuleID = '/home/carl/AnghaBench/mpv/options/extr_m_option.c_parse_str_list.c'
source_filename = "/home/carl/AnghaBench/mpv/options/extr_m_option.c_parse_str_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_log = type { i32 }
%struct.bstr = type { i32 }

@OP_NONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mp_log*, i32*, i32, i32, i8*)* @parse_str_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_str_list(%struct.mp_log* %0, i32* %1, i32 %2, i32 %3, i8* %4) #0 {
  %6 = alloca %struct.bstr, align 4
  %7 = alloca %struct.bstr, align 4
  %8 = alloca %struct.mp_log*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = getelementptr inbounds %struct.bstr, %struct.bstr* %6, i32 0, i32 0
  store i32 %2, i32* %11, align 4
  %12 = getelementptr inbounds %struct.bstr, %struct.bstr* %7, i32 0, i32 0
  store i32 %3, i32* %12, align 4
  store %struct.mp_log* %0, %struct.mp_log** %8, align 8
  store i32* %1, i32** %9, align 8
  store i8* %4, i8** %10, align 8
  %13 = load %struct.mp_log*, %struct.mp_log** %8, align 8
  %14 = load i32*, i32** %9, align 8
  %15 = load i8*, i8** %10, align 8
  %16 = load i32, i32* @OP_NONE, align 4
  %17 = getelementptr inbounds %struct.bstr, %struct.bstr* %6, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = getelementptr inbounds %struct.bstr, %struct.bstr* %7, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @parse_str_list_impl(%struct.mp_log* %13, i32* %14, i32 %18, i32 %20, i8* %15, i32 %16)
  ret i32 %21
}

declare dso_local i32 @parse_str_list_impl(%struct.mp_log*, i32*, i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
